sec: externalize secrets to .env file and secure docker-compose

--- a/CoreSupply.Identity.API/appsettings.json
+++ b/CoreSupply.Identity.API/appsettings.json
@@ -5,5 +5,16 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "JwtSettings": {
+    "Secret": "[SECRET_LOADED_FROM_ENV]",
+    "Issuer": "[ISSUER_LOADED_FROM_ENV]",
+    "Audience": "[AUDIENCE_LOADED_FROM_ENV]"
+  },
+  "ConnectionStrings": {
+    "OrderingConnectionString": "[CONNECTION_STRING_LOADED_FROM_ENV]"
+  },
+  "DatabaseSettings": {
+    "ConnectionString": "[CONNECTION_STRING_LOADED_FROM_ENV]"
+  }
 }
