--- a/CoreSupply.Ordering.API/appsettings.json
+++ b/CoreSupply.Ordering.API/appsettings.json
@@ -6,15 +6,15 @@
     }
   },
   "AllowedHosts": "*",
-
-
   "JwtSettings": {
-    "Secret": "ThisIsTheSecureKeyForCoreSupplyProject2025!",
-    "Issuer": "CoreSupplyIdentity",
-    "Audience": "CoreSupplyClients"
+    "Secret": "[SECRET_LOADED_FROM_ENV]",
+    "Issuer": "[ISSUER_LOADED_FROM_ENV]",
+    "Audience": "[AUDIENCE_LOADED_FROM_ENV]"
+  },
+  "ConnectionStrings": {
+    "OrderingConnectionString": "[CONNECTION_STRING_LOADED_FROM_ENV]"
+  },
+  "DatabaseSettings": {
+    "ConnectionString": "[CONNECTION_STRING_LOADED_FROM_ENV]"
   }
-
-
-
-
 }
