feat(discount): implement Discount gRPC service with SQLite & Dapper - Created `CoreSupply.Discount.Grpc` microservice using .NET 8. - Implemented CRUD operations for coupons using SQLite and Dapper. - Defined `discount.proto` contract for high-performance inter-service communication. - Integrated Discount gRPC client into `Quote.API` to fetch product discounts. - Updated `docker-compose.yml` to include Discount service and secure all secrets via `.env`. - Resolved version conflicts in NuGet packages.

--- a/CoreSupply.Quote.API/CoreSupply.Quote.API.csproj
+++ b/CoreSupply.Quote.API/CoreSupply.Quote.API.csproj
@@ -9,10 +9,19 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <!-- تولید کلاینت gRPC -->
+    <Protobuf Include="Protos\discount.proto" GrpcServices="Client" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <!-- پکیج‌های ضروری -->
+    <PackageReference Include="Grpc.AspNetCore" Version="2.60.0" />
     <PackageReference Include="MassTransit" Version="8.2.5" />
     <PackageReference Include="MassTransit.RabbitMQ" Version="8.2.5" />
+ 
     <PackageReference Include="Microsoft.Extensions.Caching.StackExchangeRedis" Version="10.0.0" />
-    <PackageReference Include="MongoDB.Driver" Version="3.5.0" />
+    <PackageReference Include="MongoDB.Driver" Version="2.23.1" />
+    <!-- نسخه پایدارتر -->
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
   </ItemGroup>
 
