feat(basket): implement synchronous gRPC communication with Discount service
- Added Discount.Grpc service with SQLite and Reflection support.
- Configured HTTP/2 protocol in docker-compose for gRPC compatibility.
- Refactored BasketRepository to inject and consume DiscountGrpcService.
- Verified integration: Basket correctly calculates final price using discounts.

--- a/CoreSupply.Discount.Grpc/appsettings.json
+++ b/CoreSupply.Discount.Grpc/appsettings.json
@@ -5,10 +5,7 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*",
-  "Kestrel": {
-    "EndpointDefaults": {
-      "Protocols": "Http2"
-    }
+  "DatabaseSettings": {
+    "ConnectionString": "Data Source=DiscountDb.db"
   }
 }
