--- a/CoreSupply.Discount.Grpc/CoreSupply.Discount.Grpc.csproj
+++ b/CoreSupply.Discount.Grpc/CoreSupply.Discount.Grpc.csproj
@@ -14,6 +14,7 @@
   <ItemGroup>
     <PackageReference Include="Dapper" Version="2.1.35" />
     <PackageReference Include="Grpc.AspNetCore" Version="2.60.0" />
+    <PackageReference Include="Grpc.AspNetCore.Server.Reflection" Version="2.71.0" />
     <PackageReference Include="Mapster" Version="7.4.0" />
     <PackageReference Include="System.Data.SQLite" Version="1.0.118" />
   </ItemGroup>
