fix(docker): update docker-compose ports and mount ocelot volume for gateway

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -272,6 +272,8 @@ services:
       dockerfile: CoreSupply.APIGateway/Dockerfile
     ports:
       - "9000:8080"
+    volumes:
+      - ./CoreSupply.APIGateway/ocelot.json:/app/ocelot.json
     depends_on:
       catalog.api:
         condition: service_started
