feat(gateway): implement industrial CORS policy and fixed routing; feat(client): automated basket clearing after checkout

--- a/CoreSupply.Ordering.API/CoreSupply.Ordering.API.csproj
+++ b/CoreSupply.Ordering.API/CoreSupply.Ordering.API.csproj
@@ -30,6 +30,7 @@
     <Folder Include="Application\Responses\" />
     <Folder Include="Application\Queries\" />
     <Folder Include="Domain\Enums\" />
+    <Folder Include="Queries\" />
   </ItemGroup>
 
 </Project>
